ecommerce-final-addons 8.11.15 PM/opa-gatekeeper/constraint.yaml

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-app-and-env-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
